--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
 
     <!-- SPLASH SCREEN -->
     <div id="splash-screen" class="container">
-        <img src="./images/logo.png" width="500" alt="logo">
         <h1>The bad guys have found the ultimate weapon
             to destroy Hyrule: the chickens!</h1>
             <p>Stop them 
                 from unleashing their destructive power while 
                 you get some money 
                 
-                (..maybe you can buy something useful). </p>
+                (..maybe you can get something useful). </p>
         <button id="start-btn">Save Hyrule from the chickens!</button>
     </div>
 
     <!-- GAME SCREEN -->
     <div id="game-screen" class="container">
-        <img src="./images/game-box.jpg" width="500" alt="logo">
-        <img src="./images/granero.jpg" width="500" alt="logo">
+        <div id="game-box"></div>
+        <!-- <img src="./images/granero.jpg" width="500" alt="logo" class="granero-img">
+        <img src="./images/game-box.jpg" width="500" alt="logo" class="hierba-img"> -->
     </div>
 
     <!-- GAME OVER SCREEN -->
@@ -40,15 +40,21 @@
     <div id="youwon-screen" class="container">
         <h1>YOU SAVED HYRULE!</h1>
         <h2>You saved xx rupees</h2>
-        <h3>...enough to get the Master Sword to put an end to
+        <h3>...enough to get the Master Sword and put an end to
             all the evil from this world</h3>
-        <button id="restart-btn-won">Play again?</button>
+        <button id="restart-btn-youwon">Play again?</button>
     </div>
 
 
 
     <script src="./js/main.js"></script>
     <script src="./js/game.js"></script>
+    <script src="./js/link.js"></script>
+    <script src="./js/centaleon.js"></script>
+    <script src="./js/arañas.js"></script>
+    <script src="./js/monstruos.js"></script>
+    <script src="./js/pollos.js"></script>
+
 
 </body>
 </html>
