--- a/index.html
+++ b/index.html
@@ -14,10 +14,16 @@
             to destroy Hyrule: the chickens!</h1>
             <p>Stop them 
                 from unleashing their destructive power while 
-                you get some money 
+                you collect some money 
                 
-                (..maybe you can get something useful). </p>
+                (...maybe you can get something useful). </p>
         <button id="start-btn">Save Hyrule from the chickens!</button>
+        <audio id="button-sound">
+            <source src="./sounds/sonido-pollo.mp3" type="audio/mpeg">
+        </audio>
+        <audio id="splash-music" autoplay loop>
+            <source src="./sounds/pantalla-inicio.mp3" type="audio/mpeg">
+        </audio>
     </div>
 
     <!-- GAME SCREEN -->
