--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
         <audio id="button-sound">
             <source src="./sounds/sonido-pollo.mp3" type="audio/mpeg">
         </audio>
-        <audio id="splash-music" autoplay loop>
+        <!-- <audio id="splash-music" autoplay loop>
             <source src="./sounds/pantalla-inicio.mp3" type="audio/mpeg">
-        </audio>
+        </audio> -->
     </div>
 
     <!-- GAME SCREEN -->
     <div id="game-screen" class="container">
         <div id="game-box"></div>
-        <!-- <img src="./images/granero.jpg" width="500" alt="logo" class="granero-img">
-        <img src="./images/game-box.jpg" width="500" alt="logo" class="hierba-img"> -->
+        <!-- <div class = "score">Score</div> -->
+        <!-- <div id = "timer" class="time-left">Time left</div> -->
     </div>
 
     <!-- GAME OVER SCREEN -->
