solved proyect monday

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
     <!-- GAME SCREEN -->
     <div id="game-screen" class="container">
-        <div id="game-box"></div>
-        <!-- <div class = "score">Score</div> -->
-        <!-- <div id = "timer" class="time-left">Time left</div> -->
+        <div id="game-box">
+        <div id = "timer" class="time-left">Time left 10:00</div>
+        </div>
     </div>
 
     <!-- GAME OVER SCREEN -->
@@ -60,6 +60,8 @@
     <script src="./js/arañas.js"></script>
     <script src="./js/monstruos.js"></script>
     <script src="./js/pollos.js"></script>
+    <script src="./js/contador.js"></script>
+
 
 
 </body>
