tuesdat solved lab

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     <div id="game-screen" class="container">
         <div id="game-box">
             <img src="./images/granero.jpg" alt="Granero" class="granero-image">
-            <div id = "timer" class="time-left">Time left 10:00</div>
+            <div id = "timer" class="time-left">Time left 30:00</div>
+            <div id = "rupees"class="rupees-counter">Rupees: 0</div>
         </div>
     </div>
 
@@ -44,9 +45,8 @@
     <!-- GAME OVER SCREEN -->
     <div id="gameover-screen" class="container">
     <h1>GAME OVER</h1>
-    <p>The power of the chicken has been released and it destroyed Hyrule</p>
-    <h2>You saved xx rupees</h2>
-    <h3>...for what? You are homeless now</h3>
+    <h2>The power of the chicken has been released and it destroyed Hyrule</h2>
+    <p>You only saved xx rupees...</p>
         <button id="restart-btn-gameover">Play again?</button>
     </div>
 
@@ -57,6 +57,8 @@
         <h2>You won xx rupees</h2>
         <h3>...enough to get the Master Sword and put an end to
             all the evil from this world!</h3>
+        <!-- <img src="./images/rupias.gif" alt="rupias-gift" class="rupias-gift"> -->
+        <!-- <img src="./images/confeti.gif" alt="confeti-gift" class="confeti-gift"> -->
         <button id="restart-btn-youwon">Play again?</button></div>
     </div>
 
@@ -70,6 +72,9 @@
     <script src="./js/monstruos.js"></script>
     <script src="./js/pollos.js"></script>
     <script src="./js/contador.js"></script>
+    <script src="./js/rupias.js"></script>
+    <script src="./js/contador-rupias.js"></script>
+    
 
 
 
