--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <img src="./images/granero.jpg" alt="Granero" class="granero-image">
             <div id = "timer" class="time-left">Time left 30:00</div>
             <div id = "rupees"class="rupees-counter">Rupees: 0</div>
+            <div id = "vidas" class="vidas-container">Vidas restantes: 3</div>
         </div>
     </div>
 
@@ -46,7 +47,6 @@
     <div id="gameover-screen" class="container">
     <h1>GAME OVER</h1>
     <h2>The power of the chicken has been released and it destroyed Hyrule</h2>
-    <p>You only saved xx rupees...</p>
         <button id="restart-btn-gameover">Play again?</button>
     </div>
 
@@ -54,12 +54,13 @@
     <div id="youwon-screen" class="container">
         <div class="youwon-text" >
         <h1>YOU SAVED HYRULE!</h1>
-        <h2>You won xx rupees</h2>
+        <h2>You won 20 rupees</h2>
         <h3>...enough to get the Master Sword and put an end to
             all the evil from this world!</h3>
         <!-- <img src="./images/rupias.gif" alt="rupias-gift" class="rupias-gift"> -->
         <!-- <img src="./images/confeti.gif" alt="confeti-gift" class="confeti-gift"> -->
         <button id="restart-btn-youwon">Play again?</button></div>
+        <!-- <div img src="./images/master-sword.png" alt="Sword" class="master-sword-image"></div> -->
     </div>
 
 
