--- a/index.html
+++ b/index.html
@@ -11,15 +11,14 @@
     <!-- SPLASH SCREEN -->
     <div id="splash-screen" class="container">
         <audio id="splash-music" src="./sounds/pantalla-inicio.mp3"></audio>
+        <button id="start-btn">Save Hyrule from the chicken!</button>
         <h1>The bad guys have found the ultimate weapon
             to destroy Hyrule: the chicken!</h1>
-            <p>Stop them 
+            <p>You have one minute to stop them
                 from unleashing the destructive power of the chicken while 
-                you collect some money 
-                
-                (...maybe you can get something useful). </p>
-        <button id="start-btn">Save Hyrule from the chickens!</button>
-        <audio id="button-sound">
+                you collect money 
+                (...maybe you can get something useful if you get 30 rupees). </p>
+            <audio id="button-sound">
             <source src="./sounds/sonido-pollo.mp3" type="audio/mpeg">
     </div>
 
@@ -55,7 +54,7 @@
     <div id="youwon-screen" class="container">
         <div class="youwon-text" >
         <h1>YOU SAVED HYRULE!</h1>
-        <h2>You won 20 rupees</h2>
+        <h2>You won 30 rupees</h2>
         <h3>...enough to get the Master Sword and put an end to
             all the evil from this world!</h3>
         <!-- <img src="./images/rupias.gif" alt="rupias-gift" class="rupias-gift"> -->
