--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             to destroy Hyrule: the chicken!</h1>
             <p>You have one minute to stop them
                 from unleashing the destructive power of the chicken while 
-                you collect money 
-                (...maybe you can get something useful if you get 30 rupees). </p>
+                you collect rupees 
+                (...maybe you could get something useful if you get 30 of them) </p>
             <audio id="button-sound">
             <source src="./sounds/sonido-pollo.mp3" type="audio/mpeg">
     </div>
