--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
         <button id="start-btn">Save Hyrule from the chicken!</button>
         <h1>The bad guys have found the ultimate weapon
             to destroy Hyrule: the chicken!</h1>
-            <p>You have one minute to stop them
-                from unleashing the destructive power of the chicken while 
-                you collect rupees 
-                (...maybe you could get something useful if you get 30 of them) </p>
+            <p>You have one minute to prevent them
+                from unleashing the destructive power of the chicken  
+                (...maybe you could get something useful if you get 30 rupees in that time) </p>
             <audio id="button-sound">
             <source src="./sounds/sonido-pollo.mp3" type="audio/mpeg">
     </div>
