--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <audio id="collision-monstruos-sound" src="./sounds/link-ataca3.wav"></audio>
         <audio id="victoria-sound" src="./sounds/victoria.mp3"></audio>
         <audio id="collision-rupees-sound" src="./sounds/coger-rupia.wav"></audio>
+        <audio id="collision-blue-rupees-sound" src="./sounds/coger-rupia-azul.wav"></audio>
         <audio id="collision-pollos" src="./sounds/sonido-pollo.mp3"></audio>
         
 
@@ -58,9 +59,37 @@
             all the evil from this world!</h3>
         <!-- <img src="./images/rupias.gif" alt="rupias-gift" class="rupias-gift"> -->
         <!-- <img src="./images/confeti2.gif" alt="confeti-gift" class="confeti-gift"> -->
-        <button id="restart-btn-youwon">Play again?</button></div>
+        <button id="restart-btn-youwon">Play again?</button>
+        <button id="go-crazy-btn">Wanna go crazy?</button></div>
         <!-- <div img src="./images/master-sword.png" alt="Sword" class="master-sword-image"></div> -->
     </div>
+
+    <!-- CRAZY SPLASH SCREEN -->
+    <div id="crazy-splash-screen" class="container">
+        <audio id="splash-music" src="./sounds/pantalla-inicio.mp3"></audio>
+        <button id="crazy-btn">Go and die like a hero!</button>
+        <h1>NO TIMER. DO YOUR BEST AND SURVIVE!</h1>
+            <audio id="button-sound">
+            <source src="./sounds/sonido-pollo.mp3" type="audio/mpeg">
+    </div>
+
+    <!-- CRAZY GAME SCREEN -->
+    <div id="crazy-game-screen" class="container">
+        <div id="game-box">
+            <img src="./images/granero.jpg" alt="Granero" class="granero-image">
+            <div id = "timer" class="time-left">Time left 01:00</div>
+            <div id = "rupees"class="rupees-counter">Rupees: 0</div>
+            <div id = "vidas" class="vidas-container">Pollos pacíficos: 3</div>
+        </div>
+    </div>
+
+    <!-- CRAZY GAME OVER SCREEN -->
+    <div id="crazy-gameover-screen" class="container">
+        <h1>GAME OVER</h1>
+        <h2>Hyrule has been destroyed by the power of the chicken, but at least you won xx rupees</h2>
+            <button id="crazy-restart-btn-gameover">Do you dare to try again?</button>
+        </div>
+
 
 
 
