--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
 
     <audio id="collision-game-over-sound" src="./sounds/gallo-game-over.mp3"></audio>
         <audio id="juego-sound" src="./sounds/pantalla-juego.mp3"></audio>
-        <audio id="game-over-sound" src="./sounds/pantalla-game-over.mp3"></audio>
+        <audio id="pantalla-game-over-sound" src="./sounds/pantalla-game-over.mp3"></audio>
         <audio id="collision-centaleones-sound" src="./sounds/link-ataca.wav"></audio>
         <audio id="collision-centaleones-sound" src="./sounds/link-ataca.wav"></audio>
         <audio id="collision-arañas-sound" src="./sounds/link-ataca.2.wav"></audio>
         <audio id="collision-monstruos-sound" src="./sounds/link-ataca3.wav"></audio>
         <audio id="victoria-sound" src="./sounds/victoria.mp3"></audio>
+        <audio id="pantalla-you-won-sound" src="./sounds/pantalla-victoria.mp3"></audio>
         <audio id="collision-rupees-sound" src="./sounds/coger-rupia.wav"></audio>
         <audio id="collision-blue-rupees-sound" src="./sounds/coger-rupia-azul.wav"></audio>
         <audio id="collision-pollos" src="./sounds/sonido-pollo.mp3"></audio>
@@ -61,7 +62,7 @@
         <!-- <img src="./images/rupias.gif" alt="rupias-gift" class="rupias-gift"> -->
         <!-- <img src="./images/confeti2.gif" alt="confeti-gift" class="confeti-gift"> -->
         <button id="restart-btn-youwon">Play again?</button>
-        <button id="go-crazy-btn">Wanna go crazy?</button></div>
+        <!-- <button id="go-crazy-btn">Wanna go crazy?</button></div> -->
         <!-- <div img src="./images/master-sword.png" alt="Sword" class="master-sword-image"></div> -->
     </div>
 
@@ -69,9 +70,9 @@
     <div id="crazy-game-screen" class="container">
         <div id="crazy-game-box">
             <img src="./images/granero.jpg" alt="Granero" class="granero-image">
-            <div id = "timer" class="time-left">Time left 01:00</div>
+            <div id = "timer" class="time-left">Time left 1:00</div>
             <div id = "rupees"class="rupees-counter">Rupees: 0</div>
-            <div id = "vidas" class="vidas-container">Pollos pacíficos: 3</div>
+            <div id = "vidas" class="vidas-container">Calm chickens: 3</div>
         </div>
     </div>
 
