--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <button id="start-btn">Save Hyrule from the chicken!</button>
         <h1>The bad guys have found the ultimate weapon
             to destroy Hyrule: the chicken!</h1>
-            <p>You have one minute to prevent them
+            <p>You have one minute to find the way to prevent them
                 from unleashing the destructive power of the chicken  
                 (...maybe you could get something useful if you get 30 rupees in that time) </p>
             <audio id="button-sound">
@@ -28,6 +28,11 @@
             <div id = "timer" class="time-left">Time left 01:00</div>
             <div id = "rupees"class="rupees-counter">Rupees: 0</div>
             <div id = "vidas" class="vidas-container">Pollos pacíficos: 3</div>
+            <div id="vidas-container">
+                <img src="ruta-a-tu-imagen-de-pollo.png" alt="Pollo" class="vida-icon">
+                <img src="ruta-a-tu-imagen-de-pollo.png" alt="Pollo" class="vida-icon">
+                <img src="ruta-a-tu-imagen-de-pollo.png" alt="Pollo" class="vida-icon">
+              </div>
         </div>
     </div>
 
@@ -59,11 +64,9 @@
         <h2>You won 30 rupees</h2>
         <h3>...enough to get the Master Sword and put an end to
             all the evil from this world!</h3>
-        <!-- <img src="./images/rupias.gif" alt="rupias-gift" class="rupias-gift"> -->
-        <!-- <img src="./images/confeti2.gif" alt="confeti-gift" class="confeti-gift"> -->
         <button id="restart-btn-youwon">Play again?</button>
-        <!-- <button id="go-crazy-btn">Wanna go crazy?</button></div> -->
-        <!-- <div img src="./images/master-sword.png" alt="Sword" class="master-sword-image"></div> -->
+        <div img src="./images/master-sword.png" alt="Sword" class="master-sword-image"></div>
+        
     </div>
 
     <!-- CRAZY GAME SCREEN -->
